--- a/03-paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/03-paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,17 +1,35 @@
-<h2>Por pais</h2>
-<hr>
+<div class="animate__animated animate__fadeIn animate__faster">
 
-<div class="row">
-    <div class="col">
-        <app-pais-input
-            (onEnter)="buscar($event)"
-            (onDebounce)="sugerencias($event)"
-            [placeholderText]="placeholderText">
-        </app-pais-input>
+    <h2>Por pais</h2>
+    <hr>
+
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)"
+                [placeholderText]="placeholderText">
+            </app-pais-input>
+        </div>
     </div>
-</div>
-<hr>
 
+
+    <ul *ngIf="mostrarSugerencias" class="list-group">
+        <li class="list-group-item list-group-item-action" *ngFor="let pais of paisesSugeridos">
+            <a class="nav-list" [routerLink]="['/pais', pais.alpha2Code]">
+                {{pais.name}}
+            </a>
+        </li>
+
+        <li class="list-group-item list-group-item-action" (click)="buscarSugerido(termino)">
+            <a class="nav-list">
+                Buscar "{{termino}}"
+            </a>
+        </li>
+    </ul>
+
+
+    <hr>
+
+</div>
 
 <div class="alert alert-danger" *ngIf="hayError">
     No se encontro nada con el termino: {{termino}}
@@ -19,6 +37,6 @@
 
 <div class="row">
     <div class="col">
-       <app-pais-tabla [paises]="paises"></app-pais-tabla>
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
