--- a/04-pipesApp/src/app/ventas/pages/basicos/basicos.component.html
+++ b/04-pipesApp/src/app/ventas/pages/basicos/basicos.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="text-layout">
     <h1>Pipes basicos</h1>
     <p>
@@ -9,19 +7,68 @@
 
 <div class="p-grid">
     <div class="p-col-4">
-        <p-card header="uppercase">
-
+        <p-card header="uppercase" [subheader]="nombreLower | uppercase ">
+            {{nombreLower | uppercase}}
         </p-card>
     </div>
     <div class="p-col-4">
-        2
+        <p-card header="lowerCase" [subheader]="nombreLower | lowercase ">
+            {{nombreLower | lowercase}}
+        </p-card>
     </div>
     <div class="p-col-4">
-        3
+        <p-card header="titlecase" [subheader]="nombreCompleto | titlecase ">
+            {{nombreCompleto | titlecase}}
+        </p-card>
     </div>
 </div>
 
+<div class="text-layout">
+    <h1>Date | Fecha |Pipe</h1>
+    <p>
+        Pipe par amostrar las fechas.
+    </p>
+</div>
 
+<div class="p-grid">
+    <div class="p-col-6">
+        <p-card>
+            <ul>
+                <li>fecha</li>
+                <li>fecha | date</li>
+                <li>fecha | date:'short'</li>
+                <li>fecha | date:'long'</li>
+                <li>fecha | date:'dd / MM / yyyy'</li>
+            </ul>
 
+            <hr>
 
+            <ul>
+                <li>fecha | date: 'long':'GMT-6'</li>
+                <li>fecha | date: 'long':'GMT-2'</li>
+            </ul>
 
+        </p-card>
+    </div>
+    <div class="p-col-6">
+        <p-card>
+            <ul>
+                <li>{{fecha}}</li>
+                <li>{{fecha | date}}</li>
+                <li>{{fecha | date: 'short'}}</li>
+                <li>{{fecha | date: 'long'}}</li>
+                <li>{{fecha | date: 'dd / MM / yyyy'}}</li>
+            </ul>
+
+            <hr>
+
+            <ul>
+                <li>{{fecha | date: 'long':'GMT-6' }}</li>
+                <li>{{fecha | date: 'long':'GMT-2' }}</li>
+                <li>{{fecha | date: 'long':'':'fr' }}</li>
+            </ul>
+
+        </p-card>
+    </div>
+
+</div>
