--- a/05-heroesApp/src/app/heroes/pages/listado/listado.component.html
+++ b/05-heroesApp/src/app/heroes/pages/listado/listado.component.html
@@ -1,20 +1,19 @@
-<p>listado works!</p>
+<h1>Listado de Heroes</h1>
 
-<ul>
-    <li>
-        <a routerLink="/heroes/listado">Heroes listado</a>
-    </li>
-    <li>
-        <a routerLink="/heroes/agregar">Heroes agregar</a>
-    </li>
-    <li>
-        <a routerLink="/heroes/editar/123">Heroes editar</a>
-    </li>
-    <li>
-        <a routerLink="/heroes/buscar">Heroes buscar</a>
-    </li>
-    <li>
-        <a routerLink="/heroes/123">Heroe 123</a>
-    </li>
+<mat-divider></mat-divider>
+<br>
 
-</ul>
+<div fxLayout="row wrap " 
+     fxLayout.xs="column"
+     fxLayoutAlign="center" 
+     fxLayoutGap="20px">
+
+    <div fxFlex="20" 
+         fxFlex.lg="15"
+         fxFlex.sm="30"
+         *ngFor="let heroe of heroes">
+
+         <app-heroe-tarjeta [heroe]="heroe"></app-heroe-tarjeta>
+      
+    </div>
+</div>
