--- a/05-heroesApp/src/app/shared/error-page/error-page.component.html
+++ b/05-heroesApp/src/app/shared/error-page/error-page.component.html
@@ -5,6 +5,9 @@
         <a routerLink="/auth/login">Ir a login</a>
     </li>
     <li>
+        <a routerLink="/heroes/listado">Ir a listado heroes</a>
+    </li>
+    <li>
         <a routerLink="/auth/registro">Ir a registro</a>
     </li>
 </ul>
