--- a/05-heroesApp/src/app/heroes/pages/agregar/agregar.component.html
+++ b/05-heroesApp/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,74 @@
-<p>agregar works!</p>
+<h1>
+    {{(heroe.id)?'Editar':'Nuevo'}} Heroe:  
+    <small> {{heroe.superhero}}</small>
+</h1>
+
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
+
+    <div fxFlex="50" fxLayout="column" fxLayout.xs="column">
+        <div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
+            <mat-form-field fxFlex="100" fxLayout.xs="column">
+                <mat-label>Super Heroe</mat-label>
+                <input matInput type="text" required [(ngModel)]="heroe.superhero">
+
+            </mat-form-field>
+
+            <mat-form-field fxFlex="100">
+                <mat-label>Alter ego</mat-label>
+                <input matInput type="text" required [(ngModel)]="heroe.alter_ego">
+
+            </mat-form-field>
+
+        </div>
+
+        <mat-form-field>
+            <mat-label>Primera aparicion</mat-label>
+            <input matInput type="text" required [(ngModel)]="heroe.first_appearance">
+
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Personajes</mat-label>
+            <input matInput type="text" required [(ngModel)]="heroe.characters">
+
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Creador</mat-label>
+            <mat-select required [(ngModel)]="heroe.publisher">
+                <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
+                    {{ publisher.desc}}
+                </mat-option>
+            </mat-select>
+
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Foto Url</mat-label>
+            <input matInput type="url" required [(ngModel)]="heroe.alt_img">
+
+        </mat-form-field>
+
+        <br>
+
+        <div fxLayout>
+            <button mat-raised-button color="primary" (click)="guardar()">
+                <mat-icon>edit</mat-icon>
+                {{(heroe.id)?'Actualizar':'Crear'}} 
+            </button>
+            <span class="spacer"></span>
+
+            <button mat-raised-button color="warn" *ngIf="heroe.id" (click)="borrarHeroe()">
+                <mat-icon>remove</mat-icon>
+                Borrar
+            </button>
+        </div>
+
+    </div>
+    <div fxFlex="50">
+
+        <img [src]="heroe | imagen">
+
+
+    </div>
+</div>
