--- a/06-formulariosApp/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/06-formulariosApp/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,95 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: <small>Dinamicos</small></h2>
+<hr>
+<form autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="guardar()">
+
+    <!-- Nombre -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label" >Nombre</label>
+        <div class="col-sm-9">
+            <input class="form-control"
+                    formControlName="nombre">
+            <span class="form-text text-danger"
+                    *ngIf="campoEsValido('nombre')">
+                Este campo es obligatorio y mayor a 3 digitos
+            </span>
+        </div>
+    </div>
+
+
+    <!-- Agregar favorito -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label" >Agregar</label>
+        <div class="col-sm-9">
+
+            <div class="input-group ">
+                <input  class="form-control" 
+                        placeholder="Agregar favorito"
+                        [formControl]="nuevoFavorito"
+                        (keyup.enter)="agregarFAvoritos()"
+                        >
+
+                <button class="btn btn-outline-primary" 
+                        type="button"
+                        (click)="agregarFAvoritos()" >
+                        Agregar
+                </button>
+            </div>
+        </div>
+    </div>
+
+        <!-- Lista de juegos favoritos -->
+        <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label" >Favoritos</label>
+            <div class="col-sm-9" formArrayName="favoritos">
+
+                <div class="input-group mb-1" 
+                    *ngFor="let favorito of favoritosArr.controls; let i = index">
+                    <input class="form-control " 
+                            [formControlName]="i" >
+
+                    <button class="btn btn-outline-danger" 
+                            type="button" 
+                            (click)="borrar(i)">
+                            Eliminar
+                    </button>
+                </div>
+
+
+            </div>
+        </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="submit"
+                    class="btn btn-primary float-end">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+</form>
+
+<!-- 
+<span>Persona</span>
+<pre>{{persona | json}}</pre> -->
+
+
+<div class="row">
+    <div class="col">
+        <span>Valid</span>
+        <pre>{{ miFormulario.valid}} </pre>
+
+        <span>Value</span>
+        <pre>{{ miFormulario.value | json}} </pre>
+
+        <span>Agregar juego</span>
+        <pre>{{ nuevoFavorito.value}} </pre>
+
+        <span>Pristine</span>
+        <pre>{{ miFormulario.pristine}} </pre>
+
+        <span>Touched</span>
+        <pre>{{ miFormulario.touched}} </pre>
+
+    </div>
+</div>
